Added Initial Files

--- a/resume.html
+++ b/resume.html
@@ -9,64 +9,57 @@
 
     <div class="menu">
       <p><a class="a0">MD</p>
-      <p><a class="a1" class="navLink" href="index.html">Home</a></p>
+      <p><a class="a3" class="navLink" href="index.html">Work</a></p>
+      <p><a class="a1" class="navLink" href="aboutme.html">About Me</a></p>
       <p><a class="a2" class="navLink" href="resume.html">Resume</a></p>
-      <p><a class="a3" class="navLink" href="works.html">Work</a></p>
-      <p><a class="a4" class="navLink" href="contact.html">Contact</a></p>
     </div>
 
     <div class="mainContainer">
         <div class="Header">
           <h1 class="headerResume">Resume</h1>
         </div>
+<br>
+<br>
         <div class="Text">
+          <h2 class="subheader">Technical Skills:</h2>
           <p class="paragraph">
-            Technical Skills:
-            <br>
-            <br>
-              Photoshop
+              After Effects
               <br>
               Illustrator
               <br>
-              After Effects
+              Photoshop
               <br>
               Premier
               <br>
-              Reaper Audio Software
+              Python
               <br>
               P5.JS
               <br>
-              Python
-              <br>
               HTML & CSS
+              <br>
+              Reaper Audio Software</p>
   <br>
   <br>
-  <br>
-  <br>
-            Education:
-            <br>
-            <br>
+
+          <h2 class="subheader">Education:</h2>
+          <p class="paragraph">
               New York University, Tandon School of Engineering, Brooklyn, NY
               <br>
               Masters of Science, Integrated Digital Media
               <br>
-              <br>
               Sept. 2021- Present
   <br>
   <br>
-  <br>
-  <br>
+
             Career Objective:
             <br>
-            <br>
-              Graphic Designer who specializes in creating and polishing a company’s marketing image to best  captivate their demographic.
+              Graphic Designer who specializes in creating and polishing a company’s marketing image to best  captivate their demographic.</p>
   <br>
   <br>
   <br>
   <br>
-            Exhibitions:
-            <br>
-            <br>
+          <h2 class="subheader">Exhibition:</h2>
+          <p class="paragraph">
               Competitor, YCASE: York Community Arts Scholars Exhibition, York, PA
               <br>
               Competed as a finalist alongside graduate college-level competitors held by York Community College
@@ -79,36 +72,18 @@
                 2nd place in “Painting
               <br>
               <br>
-              May 2017 - 2019
+              May 2017 - 2019</p>
   <br>
   <br>
   <br>
   <br>
-            Commissions:
-            <br>
-            <br>
+          <h2 class="subheader">Commissions:</h2>
+          <p class="paragraph">
               Seaside Heights Carousel Pavilion Mural, “Art By The Sea”, 4ft x 8ft wooden mural, medium: acrylic.
               <br>
               <br>
               September 2021</p>
        </div>
-
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
 
         <div class="footer">Christina Molinaro's Resume and Portfolio Website</div>
        </div>
