--- a/index.html
+++ b/index.html
@@ -9,52 +9,187 @@
 
     <div class="menu">
       <p><a class="a0">MD</p>
-      <p><a class="a1" class="navLink" href="index.html">Home</a></p>
+      <p><a class="a3" class="navLink" href="index.html">Work</a></p>
+      <p><a class="a1" class="navLink" href="aboutme.html">About Me</a></p>
       <p><a class="a2" class="navLink" href="resume.html">Resume</a></p>
-      <p><a class="a3" class="navLink" href="works.html">Work</a></p>
-      <p><a class="a4" class="navLink" href="contact.html">Contact</a></p>
     </div>
 
     <div class="mainContainer">
         <div class="Header">
-          <h1 class="headerHome">About Me</h1>
-        </div>
-        <div class="Images">
-          <img class="aboutmeimage"src="https://mail.google.com/mail/u/0?ui=2&ik=0bfde172a5&attid=0.1.1&permmsgid=msg-f:1747179138260040793&th=183f3a2b56f67c59&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ_RNDPhVstwOM0UGxdVXBG4kuX1zps8dXIWIs4WFrRFPPnvGZg-hU6iLTSEsCoKfjFVT7E0azfyVbIj4XvCoOqH7A8IRRKaSwx104tCrTf6zNnTE0lJXdebACI&disp=emb" alt="About Me Profile">
-        </div>
-        <div class="Text">
-          <p class="paragraph">My name is Christina Molinaro and I’m a digital media artist. I’ve worked in both digital and traditional art media.  My fondness for traditional art lies in mediums such as graphite, oils, and watercolors. I started to seriously pursue traditional art in early middle school to the present day.  In high school, I was a competitor in YCASE: York Community Arts Scholars Exhibition two years in a row.  There, I was hand-picked to show my artwork in a highly competitive field of fellow artists ranging in experience from high school or graduate college level.  I was a finalist for both years and won 2nd placements in 2 categories of “Still Life” and “Painting.”
-          <br>
-          <br>
-          While my digital experience started in high school, I worked my way through many different mediums such as photography, illustration, film and animation, audio editing, creative coding, and web development. During my high school and college years, I have done extensive work in professional programs like Adobe Photoshop, Illustrator, After Effects, and Premier. For my work that requires audio editing, I’m proficient in Reaper Audio Software.
-          <br>
-          <br>
-          Throughout my personal work, I’m inspired by loose motions and cool colors like blues, purples, and magenta. My aesthetic can change from playful and colorful, to deep and emotional.  I continue to work on expanding my skills in all mediums, subject matters, and themes to improve my future commission work.  I strive to work as a graphic designer who specializes in polishing a company’s marketing image.
-          <br>
-          <br>
-          My logo "MD" stands for "Mol Designs."</p>
+          <h1 class="headerWork">Work</h1>
         </div>
 
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <div class="Text">
+          <h2 class="subheader">After Effects</h2>
+          </div>
+        <div class="Images">
+          <iframe width="884" height="497" src="https://www.youtube.com/embed/BaORs7smiHg" title="Project1 Music Molinaro Christina" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
+                        <br>
+                        <br>
+
+        <div class="Text">
+          <h2 class="subheader">Creative Coding</h2>
+          </div>
+          <div class="Images">
+            <iframe width="884" height="497" src="https://www.youtube.com/embed/zzmkXeRO-6g" title="MolinaroChristina SoundMountain" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <br>
+            <br>
+
+            <iframe width="570" height="497" src="https://www.youtube.com/embed/emZYJEuBBIU" title="MolinaroChristina MovingCircles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <br>
+            <br>
+
+            <iframe width="563" height="497" src="https://www.youtube.com/embed/p9odxaPkdEQ" title="MolinaroChristina ThemesOfColor" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <br>
+            <br>
+
+            <iframe width="554" height="497" src="https://www.youtube.com/embed/0GUS0Ot4TVU" title="MolinaroChristina AcceleratingTriangles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <br>
+            <br>
+
+            <iframe width="569" height="497" src="https://www.youtube.com/embed/N0DhLxZwf8c" title="MolinaroChristina ClickerSnake" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <br>
+            <br>
+
+            <iframe width="565" height="497" src="https://www.youtube.com/embed/DEyHxQ8QE5Q" title="MolinaroChristina AbstractCirclesLines" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <br>
+            <br>
+
+            <iframe width="562" height="497" src="https://www.youtube.com/embed/6M6mwZCXJds" title="MolinaroChristina BouncingPhysicsBalls" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <br>
+            <br>
+
+            <iframe width="561" height="497" src="https://www.youtube.com/embed/Sxpva6wnhXw" title="MolinaroChristina SquareFlower" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+
+                        <br>
+                        <br>
+
+          <div class="Text">
+            <h2 class="subheader">Illustrator</h2>
+            </div>
+          <div class="Images">
+            <img class="workimage" src="https://lh3.googleusercontent.com/0uTze64PoiEoQZxg-rSKiFP2RNO5crC5LGHVM1JhA17lvPPz3z5NbFRCJoYxHqHEsqqLfUgUXFMhkD60CWKxQxY3hzFF3fo6p1i3Wij3WcNISMwh5Oa3tPGnipnnOyN5U-zsEEc-=w2400" alt="Illustrator1">
+
+            <br>
+            <br>
+
+            <img class="workimage" src="https://lh3.googleusercontent.com/QRaI2xOEJ72e3AyPgSx_t--cATnWfwrjQdfCQYQaNM-8K31lsU_7FYll7cUwFA5sJmrMp3oPENKirbGAF7h71HowqrDLCcAMQc_FedJQiEmYUQjUNYMMS2XoCYfSu1mxJzTMzsk8=w2400" alt="Illustrator2">
+
+            <br>
+            <br>
+
+            <img class="workimage"src="https://lh3.googleusercontent.com/S-WZF5VxQbPsxsEZeq2FV3R0dIHVieAX5MozsETE1PVsYRgojz2MgqIzFxwOgzbwlL9U0XgHVx9gmwkMc-2dj_wVlgK-9V2s5nkHBzSVJ14ImPRYT5KASUp0AVLRKDkVgd_SKNs4=w2400" alt="About Me Profile">
+          </div>
+
+                      <br>
+                      <br>
+
+          <div class="Text">
+            <h2 class="subheader">Photography</h2>
+            </div>
+          <div class="Images">
+            <img class="workimage" src="https://lh3.googleusercontent.com/4yfGFoHaX4M9cFMi_dNFyVvvoiwwiLsknCljXggNlanzhAxxHjVRNSbDlduafhtAa5YO9qOc6Qi_UYAbz5qK-7BE2yYwleOkp_eVAocmGEPC6XbvCjgdvklvMDJZachwFezUHswN=w2400" alt="Photography1">
+
+            <br>
+            <br>
+
+
+            <img class="workimage" src="https://lh3.googleusercontent.com/FrdhVyDn1CxxyupRZbWwQrb_JYM5HvZqJf2o6489Oo14pb6l2dnFgG_g82vCzo4V6TCNht2riGLEmmNqRpQSfeWYTLGbztN83x3YoE-J_X176cYVq167C2JVyDNvNduShWWKnOLZ=w2400" alt="Photography2">
+
+            <br>
+            <br>
+
+
+            <img class="workimage" src="https://lh3.googleusercontent.com/Zmtt9lBVbPQcoris_40TgymBD2WAKOdf9LUCnbomP_SpvnFf0cAhsX30kCKtUmKtyAt0lgZKbeu2EwAPyc0ya6u-N2qZ6ChyLlAH-PGiiyw4l0VQ35mDOrZOpGl0Y8_VBwnFe1fb=w2400" alt="Photography3">
+
+            <br>
+            <br>
+
+
+            <img class="workimage" src="https://lh3.googleusercontent.com/heEgaQPLqSLuiIsNbaWXXyXPBq9_w8rx7pUYGvAshYYFIlFUYsWVtodEA5KJvN4iJylVY5BGGRCJiBXtbwy3o15KSpYUJbQWe5DJ-MWNAacZ0JpsDG3YGolYQP5kQLWdysXaFqK6=w2400" alt="Photography4">
+
+          <br>
+          <br>
+
+
+            <img class="workimage" src="https://lh3.googleusercontent.com/3Lv2lPD3W5YHJayf0UEY2jpLt93rY0KO1fg-7K8KaUn6ZB8frnmLzY0sY8cTdmAvtLC-ytN0ciYS839rPpUZvvR6HnppL2uY38qmsc9LDh2OlAavUxqS7uomJB6dqhTMk8-Vnsl0=w2400" alt="Photography5">
+
+          <br>
+          <br>
+
+
+            <img class="workimage" src="https://lh3.googleusercontent.com/CFW0l7CX20SQq2N4ImPYBp96jWjtNo7B-EOGmPT6YiqSLqwPkXiJr6ZHpK10AN0G8PAaaJItgCx9jNHsLgxtR9JtMpLvyxf-Vb_1OTm0m99EmD_EVzpZNitrrBNiIfUANBY_qxAG=w2400" alt="Photography6">
+
+          <br>
+          <br>
+
+
+            <img class="workimage" src="https://lh3.googleusercontent.com/E42yr8l9gjRiBFf2xAP8MU1mhgt7-Q5NomYliPtsm8pmOnOVmlP-Z3FgvbhT9dQHd9kFQXqOKu8-aJbtuqgIG9BbzfgEWIz4wATMuOudZHidBMnXWFSBWgpugwmfEputokpbprHx=w2400" alt="Photography7">
+
+          <br>
+          <br>
+
+
+            <img class="workimage" src="https://lh3.googleusercontent.com/8-DAQ2oWJTB8TpBaZvMcKp4qiuttK31KxAA_IhaxCdX3NOQXF6jW2yJGXjdXJ_nC3bVjOwjv_bDCEXom3ZdjaWJFgHECZsaLb6-Rrz-HP2sa_vWP0VRh_87XbQ2-9Hj2n_Z4AF3B=w2400" alt="Photography8">
+
+          <br>
+          <br>
+
+
+            <img class="workimage" src="https://lh3.googleusercontent.com/lD1CX8uyFXs8lYYzzQdsGbJIJWwL-ySC-3eJ5ahxNZrXGHHZlhcTGxNrj9Aj8t881OuEBMuvPz8yYSAxF1EHHEJgvwEMG3T2mIoY7b7Co1esfeeleR2kRvab9OZKwXG_H5EnrcDn=w2400" alt="Photography9">
+
+          <br>
+          <br>
+
+
+            <img class="workimage" src="https://lh3.googleusercontent.com/k6KPEU9bEX-A_0nwC_dls1dZooUin20lvO4m73ozcnHaQ_7gTFxgWPG1xguW9DtQC2aUbRuYBgATvGMP_rWzdzwO8AfNeyLzFz3oa4pX-7vPK4we84_ex6Ky9e5MYvl0BvE6wipv=w2400" alt="Photography10">
+
+          <br>
+          <br>
+
+
+            <img class="workimage" src="https://lh3.googleusercontent.com/1NnvQzEI6DkGKvtTlz_XNrhCqW1CAre0MgR-3rMnvj9WxRAV22BoNPBIuGrZJ8fOn1-JsTxP3G0ujywunmDbBMQrafgiBpirsFEusRjabBROzw2PDQ5Ry-J2eAT4Rw4Th9DS9K6s=w2400" alt="Photography11">
+
+          <br>
+          <br>
+
+
+            <img class="workimage" src="https://lh3.googleusercontent.com/7WRqCK7V09KITBPeuNh7MVNb9eithZDfp52iLtrrLAf9AL9vp2zfA6D_-elVGgVulxEukbXo--4tTLy3y7r3qujL81cqSOWZEurzOAkY_IHB0s4Wdfy1TW9H5uJm07KeVEYbqv7y=w2400" alt="Photography12">
+
+          <br>
+          <br>
+
+
+            <img class="workimage" src="https://lh3.googleusercontent.com/Ap1fns_YMEoe3qq9M-zLorlq0okbqW0A0y6rU0qZpN0mx9TDkQhVPbcxNeFFBcu50-hJXbXwSHZGIyCJwaVj5JDCaZknPQPhrHAq7KKPpg1bWr3aXOR50cyLaa3FJ48OdD6eWlIL=w2400" alt="Photography13">
+          </div>
+                      <br>
+                      <br>
+
+
+          <div class="Text">
+            <h2 class="subheader">Traditional</h2>
+            </div>
+          <div class="Images">
+            <img class="workimage" src="https://lh3.googleusercontent.com/6LXvXBr8wo7rg4qTD1aI4rbLGudh5e3n4GnFzyRptHtHVhlsVnJFW2nECFHB_G7-Pvswt2Tu56ERKKIIXQleK6378Asg0gCLYE97t0u0aZauYIaSd49uxbm1xpC-Tfn4gQmbr6YM=w2400" alt="Traditional1">
+
+          <br>
+          <br>
+
+
+            <img class="workimage" src="https://lh3.googleusercontent.com/v6PEkibjjYPMTBgsxbWX6Tz3NSSWOjnx7_H48xWyP3FkhjyrkKHcZR5qL7-2JKlk4Gx2VHKlzbmq9SlIqA4--N9xU-8Zh6w5jEQgK6ACtITVLuzPpofMHppyafZMGHQ2zYH9eQNX=w2400" alt="Traditional2">
+          </div>
 
         <div class="footer">Christina Molinaro's Resume and Portfolio Website</div>
-
         </div>
-       </div>
-     </body>
-   </html>
+   </body>
+ </html>
